--- a/index.html
+++ b/index.html
@@ -396,7 +396,8 @@ document.getElementById('penilaianForm').addEventListener('submit', async functi
     timestamp: new Date().toISOString()
   };
 
-  await fetch("YOUR_WEB_APP_URL", {
+  await fetch("https://script.google.com/macros/s/AKfycbzjjKvDdekJNwL9cfApUQVUfqZFVwPRZNOwKs_7wJrOp2SGl63CKZ9mwefdY3Z2jwRu7w/exec
+", {
     method: "POST",
     headers: { "Content-Type": "application/json" },
     body: JSON.stringify(record)
