--- a/index.html
+++ b/index.html
@@ -170,30 +170,48 @@
         <!-- Poin Penilaian -->
        <div class="relative"><label class="block text-sm font-medium mb-2" style="color: #c0c0e0;"> <span class="icon">📋</span>Poin Penilaian </label> <input type="text" id="poinPenilaian" class="input-field w-full px-4 py-3 rounded-lg" placeholder="Ketik untuk mencari poin penilaian..." autocomplete="off" required>
         <div id="dropdownList" class="absolute top-full left-0 right-0 mt-1 rounded-lg overflow-hidden z-10" style="background: rgba(20, 20, 40, 0.95); border: 1px solid rgba(100, 100, 255, 0.3); display: none;">
-         <div class="dropdown-item px-4 py-3 cursor-pointer hover:bg-opacity-80" style="color: #e0e0ff; background: rgba(30, 30, 50, 0.6);" data-value="Kualitas Pekerjaan">
-          Servis Type SI210
-         </div>
+         <div class="dropdown-item px-4 py-3 cursor-pointer hover:bg-opacity-80" style="background: rgba(30, 30, 50, 0.6); color: #e0e0ff;">
+  Servis SI210
+</div>
    <div class="dropdown-item px-4 py-3 cursor-pointer hover:bg-opacity-80" style="background: rgba(30, 30, 50, 0.6); color: #e0e0ff;">
   Servis IRISNV
 </div>
-         <div class="dropdown-item px-4 py-3 cursor-pointer hover:bg-opacity-80" style="color: #e0e0ff; background: rgba(30, 30, 50, 0.6);" data-value="Komunikasi">
-          Servis ACRA
-         </div>
-         <div class="dropdown-item px-4 py-3 cursor-pointer hover:bg-opacity-80" style="color: #e0e0ff; background: rgba(30, 30, 50, 0.6);" data-value="Profesionalisme">
-          Setting Brake
-         </div>
-         <div class="dropdown-item px-4 py-3 cursor-pointer hover:bg-opacity-80" style="color: #e0e0ff; background: rgba(30, 30, 50, 0.6);" data-value="Pengetahuan Teknis">
-          Setting Pintu
-         </div>
-         <div class="dropdown-item px-4 py-3 cursor-pointer hover:bg-opacity-80" style="color: #e0e0ff; background: rgba(30, 30, 50, 0.6);" data-value="Keselamatan Kerja">
-          Setting Rail
-         </div>
-         <div class="dropdown-item px-4 py-3 cursor-pointer hover:bg-opacity-80" style="color: #e0e0ff; background: rgba(30, 30, 50, 0.6);" data-value="Inisiatif">
-          Inisiatif
-         </div>
-         <div class="dropdown-item px-4 py-3 cursor-pointer hover:bg-opacity-80" style="color: #e0e0ff; background: rgba(30, 30, 50, 0.6);" data-value="Kerjasama Tim">
-          Kerjasama Tim
-         </div>
+       <div class="dropdown-item px-4 py-3 cursor-pointer hover:bg-opacity-80" style="background: rgba(30, 30, 50, 0.6); color: #e0e0ff;">
+  Servis MMR
+</div>
+       <div class="dropdown-item px-4 py-3 cursor-pointer hover:bg-opacity-80" style="background: rgba(30, 30, 50, 0.6); color: #e0e0ff;">
+  Servis ACRA
+</div>
+       <div class="dropdown-item px-4 py-3 cursor-pointer hover:bg-opacity-80" style="background: rgba(30, 30, 50, 0.6); color: #e0e0ff;">
+  Servis NIDEC
+</div>
+       <div class="dropdown-item px-4 py-3 cursor-pointer hover:bg-opacity-80" style="background: rgba(30, 30, 50, 0.6); color: #e0e0ff;">
+  Setting Brake YTW
+</div>
+      <div class="dropdown-item px-4 py-3 cursor-pointer hover:bg-opacity-80" style="background: rgba(30, 30, 50, 0.6); color: #e0e0ff;">
+  Setting Brake TY
+</div>
+      <div class="dropdown-item px-4 py-3 cursor-pointer hover:bg-opacity-80" style="background: rgba(30, 30, 50, 0.6); color: #e0e0ff;">
+  Setting Brake TKL
+</div>
+              <div class="dropdown-item px-4 py-3 cursor-pointer hover:bg-opacity-80" style="background: rgba(30, 30, 50, 0.6); color: #e0e0ff;">
+  Setting Brake TKM
+</div>
+      <div class="dropdown-item px-4 py-3 cursor-pointer hover:bg-opacity-80" style="background: rgba(30, 30, 50, 0.6); color: #e0e0ff;">
+  Setting Brake Helical
+</div>
+      <div class="dropdown-item px-4 py-3 cursor-pointer hover:bg-opacity-80" style="background: rgba(30, 30, 50, 0.6); color: #e0e0ff;">
+  Setting Brake ZTW
+</div>
+              <div class="dropdown-item px-4 py-3 cursor-pointer hover:bg-opacity-80" style="background: rgba(30, 30, 50, 0.6); color: #e0e0ff;">
+  Setting Rail Sangkar
+</div>
+      <div class="dropdown-item px-4 py-3 cursor-pointer hover:bg-opacity-80" style="background: rgba(30, 30, 50, 0.6); color: #e0e0ff;">
+  Setting Rail CWT
+</div>
+      <div class="dropdown-item px-4 py-3 cursor-pointer hover:bg-opacity-80" style="background: rgba(30, 30, 50, 0.6); color: #e0e0ff;">
+  Setting Rail Pintu Luar
+</div>
         </div>
        </div><!-- Nilai -->
        <div><label class="block text-sm font-medium mb-2" style="color: #c0c0e0;"> <span class="icon">⭐</span>Masukkan Nilai (1-100) </label> <input type="number" id="nilai" class="input-field w-full px-4 py-3 rounded-lg" placeholder="Masukkan nilai" min="1" max="100" required>
