--- a/index.html
+++ b/index.html
@@ -244,8 +244,8 @@
     
     // User database with different technicians per user
     const userDatabase = {
-      'admin': {
-        password: 'admin123',
+      'asep_les': {
+        password: '123',
         teknisi: ['Nova', 'Zhahral', 'Nirwana', 'Asrori']
       },
       'supervisor': {
