--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@
     const userDatabase = {
       'asep_les': {
         password: '123',
-        teknisi: ['Nova', 'Zhahral', 'Nirwana', 'Asrori']
+        teknisi: ['Nova', 'Zhahral', 'Nirwana', 'Asrori', 'Andri Dwi Irawan']
       },
       'supervisor': {
         password: 'super456',
