--- a/index.html
+++ b/index.html
@@ -245,12 +245,12 @@
     // User database with different technicians per user
     const userDatabase = {
       'asep_les': {
-        password: '123',
+        password: '1312',
         teknisi: ['Nova', 'Zhahral', 'Nirwana', 'Asrori', 'Andri Dwi Irawan']
       },
-      'supervisor': {
-        password: 'super456',
-        teknisi: ['Eko Prasetyo', 'Fajar Nugroho', 'Gunawan Saputra', 'Hendra Kusuma']
+      'ahmad_les': {
+        password: '1312',
+        teknisi: ['Dedy Rio', 'Ahmad Rifky', 'Gandung', 'Arseto Wibisono']
       },
       'manager': {
         password: 'manage789',
