--- a/index.html
+++ b/index.html
@@ -245,16 +245,16 @@
     // User database with different technicians per user
     const userDatabase = {
       'asep_les': {
-        password: '1312',
-        teknisi: ['Nova', 'Zhahral', 'Nirwana', 'Asrori', 'Andri Dwi Irawan']
+        password: 'asep123',
+        teknisi: ['1', '4', '3', '4', '5']
       },
       'ahmad_les': {
-        password: '1312',
-        teknisi: ['Dedy Rio', 'Ahmad Rifky', 'Gandung', 'Arseto Wibisono']
+        password: 'ahmad123',
+        teknisi: ['1','2', '3', '4', '5']
       },
-      'manager': {
-        password: 'manage789',
-        teknisi: ['Irfan Hakim', 'Joko Widodo', 'Kurnia Sari', 'Lestari Putri']
+      'muji_les': {
+        password: 'muji123',
+        teknisi: ['1', '2', '3', '4', '5']
       }
     };
     
