--- a/index.html
+++ b/index.html
@@ -246,15 +246,23 @@
     const userDatabase = {
       'asep_les': {
         password: 'asep123',
-        teknisi: ['1', '4', '3', '4', '5']
+        teknisi: ['MUHAMMAD RIPAI', 'RIZA ABDALLA', 'MUHAMAD REZYA ARIFIN', 'AGUS BUDIANTO', 'SUMARTIN', 'SINGGIH PRAKOSO PUTRA BAHARI', 'IRWAN MAULANA', 'FIKRY YOGA PRATAMA', 'MUHAMAD DANI FERNANDA' ,'ADIMAS MARGAS INSAN PANDEGA', 'YOPI DARWIS']
       },
       'ahmad_les': {
         password: 'ahmad123',
-        teknisi: ['1','2', '3', '4', '5']
+        teknisi: ['SOLEHUDIN RIZAL','EKA ZULKANI WIRMAN', 'NIJAM SUWANDI', 'ARSETO WIBISONO', 'AHMAD RIFKY', 'ZUFTA AKBAR HAKIKI', 'ARIF DARMAWAN', 'ALVIN OZZI FIRMANSYAH']
+      },
+      'ilham_les': {
+        password: 'ilham123',
+        teknisi: ['FERI SETIAWAN', 'MOHAMMAD RAFSANJANI LDZADATUL FI'LI', 'RIVAN MUCHAMAD ISRO', 'YUSUF BAYU MUKTI', 'HANIF BIMUSYAFFA', 'NOVA ZHAHRAL NIRWANA ASRORI','BISSO EKO HARSANA', 'MIFTAHUL ALIM', 'FANDY BUDYANTO']
       },
       'muji_les': {
         password: 'muji123',
-        teknisi: ['1', '2', '3', '4', '5']
+        teknisi: ['DENI MUSTAQMAL', 'KALIMIN', 'MUHAMAD SOPIAN', 'ZEPTU MARYANTO', 'RICHO DESTYA RANGGA', 'ADITIA REHAN GINTARO', 'ARMADANI BAHTIAR', 'PURWANTO (C)]
+      },
+      'boedi_les': {
+        password: 'boedi123',
+        teknisi: ['FARDAN RIZAL ITSNAINI', 'MAULANA ALI ACHMAD', 'DARYATNO', 'AJI PANGESTU', 'JONY ERVANDA', 'AMIR MAHMUD', 'HARDIANTO BALCHAER' , 'RIVA RAHMAT FERDIANSYAH', 'FRIENDINDA RUSENDO HARDIYANTO']
       }
     };
     
