--- a/index.html
+++ b/index.html
@@ -258,7 +258,7 @@
       },
       'muji_les': {
         password: 'muji123',
-        teknisi: ['DENI MUSTAQMAL', 'KALIMIN', 'MUHAMAD SOPIAN', 'ZEPTU MARYANTO', 'RICHO DESTYA RANGGA', 'ADITIA REHAN GINTARO', 'ARMADANI BAHTIAR', 'PURWANTO (C)]
+        teknisi: ['DENI MUSTAQMAL', 'KALIMIN', 'MUHAMAD SOPIAN', 'ZEPTU MARYANTO', 'RICHO DESTYA RANGGA', 'ADITIA REHAN GINTARO', 'ARMADANI BAHTIAR', 'PURWANTO (C)']
       },
       'boedi_les': {
         password: 'boedi123',
