--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@
       },
       'ilham_les': {
         password: 'ilham123',
-        teknisi: ['FERI SETIAWAN', 'MOHAMMAD RAFSANJANI LDZADATUL FI'LI', 'RIVAN MUCHAMAD ISRO', 'YUSUF BAYU MUKTI', 'HANIF BIMUSYAFFA', 'NOVA ZHAHRAL NIRWANA ASRORI','BISSO EKO HARSANA', 'MIFTAHUL ALIM', 'FANDY BUDYANTO']
+        teknisi: ['FERI SETIAWAN', 'MOHAMMAD RAFSANJANI LDZADATUL FI"LI', 'RIVAN MUCHAMAD ISRO', 'YUSUF BAYU MUKTI', 'HANIF BIMUSYAFFA', 'NOVA ZHAHRAL NIRWANA ASRORI','BISSO EKO HARSANA', 'MIFTAHUL ALIM', 'FANDY BUDYANTO']
       },
       'muji_les': {
         password: 'muji123',
