--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
      <div class="card rounded-2xl p-8 mb-6">
       <div class="flex justify-between items-center mb-8">
        <div>
-        <h1 id="formTitle" class="text-3xl font-bold mb-2" style="color: #e0e0ff;">key Performance Indicator</h1>
+        <h1 id="formTitle" class="text-3xl font-bold mb-2" style="color: #e0e0ff;">Key Performance Indicator</h1>
         <p class="text-sm" style="color: #a0a0c0;">Silakan isi formulir penilaian di bawah ini</p>
        </div><button id="logoutBtn" class="px-4 py-2 rounded-lg text-sm font-medium" style="background: rgba(239, 68, 68, 0.2); color: #fca5a5; border: 1px solid rgba(239, 68, 68, 0.3);"> Keluar </button>
       </div>
