--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
         </div>
        </div><!-- Nilai -->
        <div><label class="block text-sm font-medium mb-2" style="color: #c0c0e0;"> <span class="icon">⭐</span>Masukkan Nilai (1-100) </label> <input type="number" id="nilai" class="input-field w-full px-4 py-3 rounded-lg" placeholder="Masukkan nilai" min="1" max="100" required>
-       </div><!-- Submit Button --> <button type="submit" id="submitBtn" class="btn-primary w-full py-3 rounded-lg font-semibold text-lg" style="color: #ffffff;"> <span id="submitBtnText">Submit Penilaian</span> </button>
+       </div><!-- Submit Button --> <button type="submit" id="submitBtn" class="btn-primary w-full py-3 rounded-lg font-semibold text-lg" style="color: #ffffff;"> <span id="submitBtnText">📩 Submit</span> </button>
       </form>
      </div>
      <div class="text-center text-xs" style="color: #808090;" id="copyrightForm">
