--- a/index.html
+++ b/index.html
@@ -265,7 +265,7 @@
         teknisi: ['FARDAN RIZAL ITSNAINI', 'MAULANA ALI ACHMAD', 'DARYATNO', 'AJI PANGESTU', 'JONY ERVANDA', 'AMIR MAHMUD', 'HARDIANTO BALCHAER' , 'RIVA RAHMAT FERDIANSYAH', 'FRIENDINDA RUSENDO HARDIYANTO']
       },
       'mukhlis': {
-        password: 'ilham123',
+        password: 'mukhlis123',
         teknisi: ['FERI SETIAWAN', 'MOHAMMAD RAFSANJANI LDZADATUL FI"LI', 'RIVAN MUCHAMAD ISRO', 'YUSUF BAYU MUKTI', 'HANIF BIMUSYAFFA', 'NOVA ZHAHRAL NIRWANA ASRORI','BISSO EKO HARSANA', 'MIFTAHUL ALIM', 'FANDY BUDYANTO']
       }
     };
